add new website from server na

--- a/xem-phim-bo/con-ra-the-thong-gi-nua/index.html
+++ b/xem-phim-bo/con-ra-the-thong-gi-nua/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             15
+             16
             </dd>
             <br/>
            </dl>
@@ -1736,18 +1736,84 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/long-ho-phong-van" title="Long hổ phong vân">
+          <a class="list-top-movie-link" href="/phim-moi/khong-gian-bi-an-2" title="Không Gian Bí Ẩn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/long-ho-phong-van-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-gian-bi-an-2010-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Long hổ phong vân
+             Không Gian Bí Ẩn
             </span>
             <span class="list-top-movie-item-en">
-             City on Fire
+             Hubble
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/doi-nha" title="Đội nhà">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-nha-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đội nhà
+            </span>
+            <span class="list-top-movie-item-en">
+             Home Team
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/xac-song-phan-5" title="Xác Sống (Phần 5)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-phan-5-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Xác Sống (Phần 5)
+            </span>
+            <span class="list-top-movie-item-en">
+             The Walking Dead (Season 5)
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/barbie-in-a-mermaid-tale" title="Barbie in a Mermaid Tale">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/barbie-in-a-mermaid-tale-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Barbie in a Mermaid Tale
+            </span>
+            <span class="list-top-movie-item-en">
+             Barbie in a Mermaid Tale
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1758,87 +1824,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/i-think-i-love-my-wife" title="I Think I Love My Wife">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-y-ta-tot" title="Người y tá tốt">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/i-think-i-love-my-wife-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-y-ta-tot-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             I Think I Love My Wife
+             Người y tá tốt
             </span>
             <span class="list-top-movie-item-en">
-             I Think I Love My Wife
+             The Good Nurse
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ma-xui-quy-khien" title="Ma xui quỷ khiến">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-xui-quy-khien-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ma xui quỷ khiến
-            </span>
-            <span class="list-top-movie-item-en">
-             The Influence
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/me-chong-nang-dau-2" title="Mẹ Chồng Nàng Dâu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-chong-nang-dauvietsub-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mẹ Chồng Nàng Dâu
-            </span>
-            <span class="list-top-movie-item-en">
-             Mẹ Chồng Nàng Dâu
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoshino-gen-chuyen-luu-dien-pop-virus" title="HOSHINO GEN: Chuyến lưu diễn “POP VIRUS”">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoshino-gen-chuyen-luu-dien-pop-virus-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             HOSHINO GEN: Chuyến lưu diễn “POP VIRUS”
-            </span>
-            <span class="list-top-movie-item-en">
-             GEN HOSHINO STADIUM TOUR "POP VIRUS"
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
