add new website from server na

--- a/xem-phim-bo/the-gioi-khung-long-thuyet-hon-mang/index.html
+++ b/xem-phim-bo/the-gioi-khung-long-thuyet-hon-mang/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1657,21 +1657,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dem-da-hoi" title="Đêm Dạ Hội">
+          <a class="list-top-movie-link" href="/phim-moi/co-dau-dai-chien" title="Cô dâu đại chiến">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-da-hoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-dau-dai-chien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đêm Dạ Hội
+             Cô dâu đại chiến
             </span>
             <span class="list-top-movie-item-en">
-             Prom Ride
+             Battle of the Brides
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1679,18 +1679,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ac-quy-doi-dau" title="ÁC QUỶ ĐỐI ĐẦU">
+          <a class="list-top-movie-link" href="/phim-moi/the-gioi-kia" title="Thế giới kia">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ac-quy-doi-dau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-kia-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             ÁC QUỶ ĐỐI ĐẦU
+             Thế giới kia
             </span>
             <span class="list-top-movie-item-en">
-             Deliver Us From Evil
+             NiNoKuni
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1701,18 +1701,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-chu-meo-nghi-gi" title="Những chú mèo nghĩ gì">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-giu-rong" title="Người Giữ Rồng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-chu-meo-nghi-gi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-giu-rong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những chú mèo nghĩ gì
+             Người Giữ Rồng
             </span>
             <span class="list-top-movie-item-en">
-             Inside the Mind of a Cat
+             Dragonkeeper
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/phi-vu-den" title="Phi vụ đen">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-vu-den-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Phi vụ đen
+            </span>
+            <span class="list-top-movie-item-en">
+             Blacklight
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1723,43 +1745,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/biet-kich-dai-chien-thay-ma" title="Biệt Kích: Đại Chiến Thây Ma">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-kich-dai-chien-thay-ma-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Biệt Kích: Đại Chiến Thây Ma
-            </span>
-            <span class="list-top-movie-item-en">
-             Navy Seals: The Battle for New Orleans
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-phan-no-cua-cac-vi-than-2012" title="Sự Phẫn Nộ Của Các Vị Thần 2012">
+          <a class="list-top-movie-link" href="/phim-moi/linh-hon-bac-phan-1" title="Linh Hồn Bạc phần 1">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-phan-no-cua-cac-vi-than-2012-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-hon-bac-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sự Phẫn Nộ Của Các Vị Thần 2012
+             Linh Hồn Bạc phần 1
             </span>
             <span class="list-top-movie-item-en">
-             Wrath of the Titans
+             Gintama ss1
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
